2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* BrowserWindow.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* ViewpointList.xml:
	* X3DBrowserEditor.cpp:
	* NodeIndex.h:
	* NodeIndex.xml:
	* LODEditor.cpp:
	* NodeIndex.cpp:
	* LightEditor.cpp:
	* InlineEditor.cpp:
	* X3DViewpointListInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DViewpointListInterface.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* NodeIndex.h:
	* LODEditor.h:
	* LODEditor.xml:
	* NodeIndex.xml:
	* LODEditor.cpp:
	* NodeIndex.cpp:
	* LightEditor.xml:
	* X3DLODEditor.h:
	* LightEditor.h:
	* InlineEditor.xml:
	* X3DLODEditor.cpp:
	* LightEditor.cpp:
	* InlineEditor.h:
	* InlineEditor.cpp:
	* X3DLODEditorInterface.h:
	* X3DNodeIndexInterface.h:
	* X3DNodeIndexInterface.cpp:
	* X3DLODEditorInterface.cpp:
	* X3DLightEditorInterface.h:
	* X3DInlineEditorInterface.h:
	* X3DLightEditorInterface.cpp:
	* X3DInlineEditorInterface.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* LODEditor.xml:
	* X3DLODEditor.h:
	* LODRangeWidget.h:
	* X3DLODEditor.cpp:
	* X3DLODEditorInterface.h:
	* X3DLODEditorInterface.cpp: 

2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* LODEditor.h:
	* LODEditor.xml:
	* LODEditor.cpp:
	* X3DLODEditor.h:
	* LightEditor.h:
	* X3DLODEditor.cpp:
	* .dirstamp:
	* X3DLODEditorInterface.h:
	* X3DLODEditorInterface.cpp:
	* .dirstamp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserWidget.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* InlineEditor.cpp:
	* FileSaveDialog.h:
	* FileSaveDialog.cpp: 
