@@ -1,3 +1,9 @@
+2014-08-18  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp:
+	* NodeIndex.h:
+	* NodeIndex.cpp: 
+
 2014-08-17  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DUserInterface.h:
